# Parking-Ticket-System

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  __main__.py  example_input.txt  parking_lot.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
db/: database.py
models/: car.py
services/: command_parser.py  parking_management.py  plate_image_detection.py  report_service.py
tests/: test_parking_management.py
utils/: logger.py
