[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parkinglot"
version = "0.1.0"
description = "Parking Lot Management System"
authors = [
    { name="Pascal Rothe", email="ibirothe@gmail.com" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
