[project]
name = "parkinglot"
version = "0.1.0"
description = "Parking Lot Management System"
authors = [
    { name="Pascal Rothe", email="ibirothe@gmail.com" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["services", "models"]
known_third_party = ["pytest", "django"]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "W503"   # Conflicting with Black
]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".pytest_cache",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
python_files = "test_*.py"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
